--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -66,6 +66,21 @@
             android:textColorHint="#2E2D2D" />
 
 
+        <EditText
+            android:id="@+id/edit_address"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/edittext_background"
+            android:ems="10"
+            android:hint="Address"
+            android:inputType="text"
+            android:paddingStart="20dp"
+            android:textColorHint="#2E2D2D" />
+
         <Button
             android:id="@+id/btnSave"
             android:layout_width="match_parent"
