--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -204,18 +204,18 @@
 
                         <ImageView
                             android:id="@+id/imageView7"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="48dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:padding="10dp"
                             app:srcCompat="@drawable/cart_btn" />
 
                         <com.nex3z.notificationbadge.NotificationBadge
                             android:id="@+id/badge"
-                            android:layout_width="wrap_content"
+                            android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:layout_gravity="top|right"
-                            android:translationX="-12dp"
+                            android:translationX="-66dp"
+                            android:translationY="0dp"
                             app:nbMaxTextLength="2"></com.nex3z.notificationbadge.NotificationBadge>
 
 
