--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -448,24 +448,24 @@
 
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_gravity="center"
                         android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/imageView7"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="48dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:translationX="14dp"
                             app:srcCompat="@drawable/cart_btn" />
 
                         <com.nex3z.notificationbadge.NotificationBadge
                             android:id="@+id/badge"
-                            android:layout_width="wrap_content"
+                            android:layout_width="28dp"
                             android:layout_height="28dp"
-                            android:layout_gravity="top|right"
-                            android:translationX="-12dp"
+                            android:layout_gravity="center|top"
                             app:nbMaxTextLength="2"></com.nex3z.notificationbadge.NotificationBadge>
 
 
