--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,11 +51,12 @@
                     android:drawablePadding="10dp"
                     android:elevation="4dp"
                     android:ems="10"
+                    android:focusableInTouchMode="false"
                     android:hint="Search your favorite food"
                     android:inputType="text"
                     android:outlineProvider="background"
                     android:padding="15dp"
-                    android:textStyle="italic"
+                    android:textStyle="normal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
