--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,28 +15,44 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/edtSearchView"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="18dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/search_edit_background"
-                android:elevation="4dp"
-                android:ems="10"
-                android:focusable="false"
-                android:inputType="text"
-                android:outlineProvider="background"
-                android:padding="8dp"
-                app:closeIcon="@drawable/baseline_clear_24"
-                app:iconifiedByDefault="false"
-                app:queryBackground="@color/white"
-                app:queryHint="Search your favorite food"
-                app:searchHintIcon="@null"
-                app:searchIcon="@drawable/search"
-                tools:ignore="VisualLintTextFieldSize" />
+                android:layout_marginBottom="18dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/backSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:srcCompat="?attr/actionModeCloseDrawable" />
+
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/edtSearchView"
+                    style="@style/MySearchViewStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginBottom="6dp"
+                    android:background="@drawable/search_edit_background"
+                    android:elevation="4dp"
+                    android:ems="10"
+                    android:focusable="false"
+                    android:inputType="text"
+                    android:outlineProvider="background"
+                    app:closeIcon="@drawable/baseline_clear_24"
+                    app:iconifiedByDefault="false"
+                    app:queryBackground="@color/white"
+                    app:queryHint="Search your favorite food"
+                    app:searchHintIcon="@null"
+                    app:searchIcon="@drawable/search"
+                    tools:ignore="VisualLintTextFieldSize" />
+
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/viewSearch"
