--- a/app/src/main/res/layout/viewholder_order_detail.xml
+++ b/app/src/main/res/layout/viewholder_order_detail.xml
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
         app:layout_constraintStart_toStartOf="@+id/listFoodNameOrder"
         app:layout_constraintTop_toTopOf="@+id/constraintLayout3">
@@ -46,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:text="Products"
+            android:text="items"
             android:textColor="#3F4259"
             android:textSize="16sp" />
     </LinearLayout>
