--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,10 +92,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="2dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="36dp"
             android:text="@string/forgot_password"
+            android:textAllCaps="true"
             android:textColor="#F44336"
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
         <Button
